[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Johan Olsson <kurnos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
lazy_static = "1.4.0"
regex = "1.4.2"
bit-set = "0.5.2"
itertools = "0.9.0"